layout: table overlapped fixed with flex instead of grid.

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -51,6 +51,10 @@ th{
   }
   .invoice-preview {
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
+    margin: 0;
+    padding:0;
+    border: none;
+    box-shadow: none;
   }
 }
